--- a/hw2/hw2.1/hw2.1.html
+++ b/hw2/hw2.1/hw2.1.html
@@ -3,7 +3,6 @@
 <head>
   <title>Homework 2</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     table {
       border-collapse: collapse;
@@ -27,11 +26,6 @@
       margin-top: 20px;
     }
 
-    .chart-container {
-      width: 50%;
-      margin: auto;
-    }
-
     h3 {
       margin: 20px 0;
     }
@@ -42,18 +36,10 @@
     <h1 class="my-4">Upload an Excel file (.xlsx)</h1>
     <input type="file" id="fileInput" accept=".xlsx" class="form-control mb-4">
     <div id="output"></div>
-    <div class="frequency-table" id="frequencyAmbitious">
-      <canvas id="chartAmbitious"></canvas>
-    </div>
-    <div class="frequency-table" id="frequencyHeight">
-      <canvas id="chartHeight"></canvas>
-    </div>
-    <div class="frequency-table" id="frequencySex">
-      <canvas id="chartSex"></canvas>
-    </div>
-    <div class="frequency-table" id="jointDistributionSexAmbitious">
-      <canvas id="chartJointDistribution"></canvas>
-    </div>
+    <div class="frequency-table" id="frequencyAmbitious"></div>
+    <div class="frequency-table" id="frequencyheight"></div>
+    <div class="frequency-table" id="frequencySex"></div>
+    <div class="frequency-table" id="jointDistributionSexAmbitious"></div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/jszip.js"></script>
@@ -74,10 +60,10 @@
             var XL_row_object = XLSX.utils.sheet_to_row_object_array(workbook.Sheets[sheetName]);
             displayDataInTable(XL_row_object);
             document.getElementById('output').innerHTML = '';
-            calculateFrequency(XL_row_object, "Ambitious (0-5)", "frequencyAmbitious", "chartAmbitious");
-            calculateFrequency(XL_row_object, "Height", "frequencyHeight", "chartHeight");
-            calculateFrequency(XL_row_object, "Sex", "frequencySex", "chartSex");
-            calculateJointDistribution(XL_row_object, "Sex", "Ambitious (0-5)", "jointDistributionSexAmbitious", "chartJointDistribution");
+            calculateFrequency(XL_row_object, "Ambitious (0-5)", "frequencyAmbitious");
+            calculateFrequency(XL_row_object, "height", "frequencyheight");
+            calculateFrequency(XL_row_object, "Sex", "frequencySex");
+            calculateJointDistribution(XL_row_object, "Sex", "Ambitious (0-5)", "jointDistributionSexAmbitious");
           });
 
         };
@@ -116,7 +102,7 @@
       document.getElementById('output').appendChild(table);
     }
 
-    function calculateFrequency(data, variableName, outputElementId, chartId) {
+    function calculateFrequency(data, variableName, outputElementId) {
       var frequencies = {};
       var totalEntries = data.length;
 
@@ -134,26 +120,20 @@
       result += '<table class="table table-bordered table-hover">';
       result += '<tr><th>Value</th><th>Absolute Frequency</th><th>Relative Frequency</th><th>Percentage Frequency</th></tr>';
 
-      var labels = [];
-      var dataValues = [];
       for (var value in frequencies) {
         var frequency = frequencies[value];
         var relativeFrequency = frequency / totalEntries;
         var percentage = (relativeFrequency * 100).toFixed(2);
 
         result += '<tr><td>' + value + '</td><td>' + frequency + '</td><td>' + relativeFrequency.toFixed(2) + '</td><td>' + percentage + '%</td></tr>';
-        labels.push(value);
-        dataValues.push(frequency);
       }
 
       result += '</table>';
 
       document.getElementById(outputElementId).innerHTML = result;
-
-      createPieChart(chartId, labels, dataValues, variableName);
     }
 
-    function calculateJointDistribution(data, variable1, variable2, outputElementId, chartId) {
+    function calculateJointDistribution(data, variable1, variable2, outputElementId) {
       var jointDistribution = {};
 
       data.forEach(function (entry) {
@@ -173,56 +153,17 @@
       result += '<table class="table table-bordered table-hover">';
       result += '<tr><th>Values</th><th>Absolute Frequency</th><th>Relative Frequency</th><th>Percentage Frequency</th></tr>';
 
-      var labels = [];
-      var dataValues = [];
       for (var key in jointDistribution) {
         var frequency = jointDistribution[key];
         var relativeFrequency = frequency / data.length;
         var percentage = (relativeFrequency * 100).toFixed(2);
 
         result += '<tr><td>' + key + '</td><td>' + frequency + '</td><td>' + relativeFrequency.toFixed(2) + '</td><td>' + percentage + '%</td></tr>';
-        labels.push(key);
-        dataValues.push(frequency);
       }
 
       result += '</table>';
 
       document.getElementById(outputElementId).innerHTML = result;
-
-      createPieChart(chartId, labels, dataValues, variable1 + ' and ' + variable2);
-    }
-
-    function createPieChart(chartId, labels, dataValues, title) {
-      var ctx = document.getElementById(chartId).getContext('2d');
-      new Chart(ctx, {
-        type: 'pie',
-        data: {
-          labels: labels,
-          datasets: [{
-            data: dataValues,
-            backgroundColor: [
-              '#FF6384',
-              '#36A2EB',
-              '#FFCE56',
-              '#4BC0C0',
-              '#9966FF',
-              '#FF9F40'
-            ]
-          }]
-        },
-        options: {
-          responsive: true,
-          plugins: {
-            legend: {
-              position: 'top',
-            },
-            title: {
-              display: true,
-              text: title
-            }
-          }
-        }
-      });
     }
 
     // Add a listener to the file input to start the file analysis when selected
