--- a/hw2/hw2.3/JS/randomApp.html
+++ b/hw2/hw2.3/JS/randomApp.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,23 +7,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Variates Distribution</title>
     <style>
-        table {
-            width: 80%;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            max-width: 800px;
             margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        input[type="number"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 20px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
+        button {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        table {
+            width: 100%;
+            margin-top: 20px;
             border-collapse: collapse;
         }
 
-        th, td {
-            border: 1px solid black;
+        th,
+        td {
+            border: 1px solid #ddd;
             padding: 8px;
             text-align: center;
         }
+
+        th {
+            background-color: #f2f2f2;
+        }
     </style>
-    <h1>Insert values to calculate the frequency!</h1>
 </head>
 
 <body>
     <div class="container">
+        <h1>Insert values to calculate the frequency!</h1>
         <label for="N">Enter N (number of random variates):</label>
         <input type="number" id="N" value="1000">
         <br>
@@ -41,7 +98,7 @@
             // Generate random variates
             var variates = Array.from({ length: N }, () => Math.random());
 
-    
+
             var contatore = new Array(k).fill(0);
             variates.forEach(function (value) {
                 var index = Math.floor(value * k);
@@ -65,3 +122,4 @@
 </body>
 
 </html>
+```
